added config and sample

--- a/config_sample.json
+++ b/config_sample.json
@@ -1,3 +1,3 @@
 {
-  "API_KEY" : "YourAPIKeyFromBfTracker" //API_KEY from https://battlefieldtracker.com/site-api 
+  "API_KEY" : "YourAPIKeyFromBfTracker"
 }
